--- a/InternetBanking/PRESENTACION/PRESENTACION.csproj
+++ b/InternetBanking/PRESENTACION/PRESENTACION.csproj
@@ -203,6 +203,7 @@
     <Content Include="Views\Cliente\ConsumoTarjeta.cshtml" />
     <Content Include="Views\Cliente\AvanceEfectivo.cshtml" />
     <Content Include="Views\Cliente\PagarTarjeta.cshtml" />
+    <Content Include="Views\Cliente\Historialtarjeta.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
