--- a/InternetBanking/DATOS/App.Config
+++ b/InternetBanking/DATOS/App.Config
@@ -7,6 +7,7 @@
   <connectionStrings>
     <add name="BancoEntities" connectionString="metadata=res://*/Banco.csdl|res://*/Banco.ssdl|res://*/Banco.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-JEAVKQQ;initial catalog=Banco;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <add name="BancoEntities1" connectionString="metadata=res://*/Banco.csdl|res://*/Banco.ssdl|res://*/Banco.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-JEAVKQQ;initial catalog=Banco;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="BancoEntities2" connectionString="metadata=res://*/prueba.csdl|res://*/prueba.ssdl|res://*/prueba.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-JEAVKQQ;initial catalog=Banco;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
